# profet

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  run_profet.ipynb  setup.cfg  setup.py
.github/workflows/: conda.yml  paper.yml  python-package.yml  sphinx.yml
_tests/: test_io.py
conda/: environment.yaml  meta.yaml
docs/: api.html  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js  usage.html
docs/_sources/: installation.rst.txt  usage.rst.txt
docs/_static/: documentation_options.js
docs/source/: api.rst  conf.py  index.rst
paper/: paper.bib  paper.md
profet/: Cleaver.py  PROFET_uniprot_checker.py  __init__.py  alphafold.py  cache.py  cleaver.py  command_line.py  pdb.py  profet.py
src/: alphafold.py  fetcher.py  io.py  pdb.py
template/: database.py
