[metadata]
name = profet
version = 0.0.1
author = mooniean
author_email = author@example.com
description = Protein structure Fetcher from online databases
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alan-turing-institute/profet
project_urls =
    Bug Tracker = https://github.com/alan-turing-institute/profet/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = profet
packages = find:
python_requires = >=3.6

[options.packages.find]
where = profet