[metadata]
name = profet
author = mooniean
author_email = bcostagomes@turing.ac.uk
description = Protein structure Fetcher from online databases
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alan-turing-institute/profet
project_urls =
    Bug Tracker = https://github.com/alan-turing-institute/profet/issues
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
  numpy
  pypdb
  requests
  pandas
  requests_html
  bs4
  pypdb@git+https://github.com/williamgilpin/pypdb@master#egg=pypdb
  lxml_html_clean

[options.extras_require]
dev =
  pytest
  pytest-cov
build_sphinx =
  sphinx
  sphinx_rtd_theme
  sphinx-argparse


[tool:pytest]
addopts = --cov=profet --cov-report term --cov-report html
